# WEB-HW10

./: README.md
WEB10/: pyproject.toml
WEB10/hw_quotes/: manage.py
WEB10/hw_quotes/hw_quotes/: asgi.py  settings.py  urls.py  wsgi.py
WEB10/hw_quotes/quotes/: forms.py  models.py  urls.py  utils.py  views.py
WEB10/hw_quotes/quotes/migrations/: 0001_initial.py  0002_rename_description_author_bio_alter_tag_name.py
WEB10/hw_quotes/quotes/static/quotes/: style.css
WEB10/hw_quotes/quotes/templates/quotes/: add_quote.html  add_quote_without_author.html  base_with_if.html
WEB10/hw_quotes/quotes/templatetags/: extract.py  extract_mongo.py
WEB10/hw_quotes/users/: forms.py  urls.py  views.py
WEB10/hw_quotes/users/migrations/: 0001_initial.py  0002_delete_profile.py
WEB10/hw_quotes/users/templates/users/: logout.html  signup.html
WEB10/hw_quotes/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
