[tool.poetry]
name = "web10"
version = "0.1.0"
description = ""
authors = ["Oleksandr Volynets <108275803+OleksandrVolynets@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.6"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
